--- a/content/resume.mdx
+++ b/content/resume.mdx
@@ -6,6 +6,14 @@ updated: '2024-08-07T18:00:00.000Z'
 categories: []
 keywords:
   [
+    'monorepo','micro frontend','web performance',
+    'redux','vuex','contextapi',
+    'tailwind','radix',
+    'prisma','drizzle',
+    'ssr','rsc',
+    'google analytics','gtm',
+    'ally','web worker','wasm',
+    'gsap',
     'framer motion',
     'animation',
     'frontend',
@@ -37,10 +45,10 @@ Frontend and Fullstack Developer with extensive experience in designing, develop
 
 ## TECHNICAL SKILLS
 
-**Languages:** JavaScript, C++  
+**Languages:** JavaScript, TypeScript, C++, and Go.  
 **Databases:** MongoDB  
 **Frameworks:** ReactJS, NodeJS, NextJS, VueJS, ExpressJS, NestJS  
-**Other Technologies:** Micro Frontend, Web Performance, Redux, Vuex, Pinia, ContextAPI, Tailwind, Radix, ReactQuery, RTK Query, Prisma, Drizzle, SSR/RSC, GA & GTM, Ally, Web Worker, WASM, GSAP, Framer Motion, ThreeJS
+**Other Technologies:** Micro Frontend, Web Performance, Redux, Vuex, ContextAPI, Tailwind, Radix, ReactQuery, RTK Query, Prisma, Drizzle, SSR, RSC, Google Analytics, GTM, Ally, Web Worker, WASM, GSAP, Framer Motion, ThreeJS
 
 ## PROJECT DETAILS
 
