--- a/content/resume.mdx
+++ b/content/resume.mdx
@@ -19,10 +19,9 @@ keywords:
     'frontend',
     'ui',
     'ux',
-    'design',
+    'figma',
     'nextjs',
     'react',
-    'remix',
     'manim',
     'animotion',
     'vuejs',
