to update result

--- a/content/about-rashidtvmr.mdx
+++ b/content/about-rashidtvmr.mdx
@@ -30,6 +30,7 @@ You might find me under several variations online:
 - **rashidtv** - Shortened version used on some platforms
 - **tvrashid** - Alternative ordering of my handle
 - **raashid** - The domain for this official site (raashid.me)
+- **raashid.me** - The domain for this official site with tld (raashid.me)
 - **rashid pbt** - Professional variant
 - **Mohammed Rashid** - My full legal name
 
